2019-12-12  Charlie Zender  <zender@uci.edu>

	* NCO 4.9.1-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.1-alpha02: Utthita Trikonasana';git push
	git tag -a 4.9.1-alpha02 -m 'autoconf EXTERNL netcdf_mem.h;nco_copy_att() _NCProperties;ncremap nco_con dfl;';git push --tags

	* Modify configure.ac to define EXTERNL from netcdf.h during autoconf check of netcdf_mem.h
	Thanks to Matthew Thompson and Dave Allured for reporting and solving the issue

	* Surgically prevent nco_copy_att() from attempting to copy _NCProperties

	* Henry restored functionality to edg_typ and ply_tri_mth options

2019-12-10  Charlie Zender  <zender@uci.edu>

	* Print names of attribute and variables/groups when nco_copy_att() fails

2019-12-08  Charlie Zender  <zender@uci.edu>

	* ncremap add stubs for MOAB-Tempest executable mbtempest

2019-12-06  Charlie Zender  <zender@uci.edu>

	* Re-do logic for invoking small circle triangles

2019-12-05  Charlie Zender  <zender@uci.edu>

	* ncremap change default regridder algorithm from ESMF bilinear to NCO nco_con

	* NCO 4.9.1-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.1-alpha01: Massage';git push
	git tag -a 4.9.1-alpha01 -m 'Functionally identical to 4.9.0';git push --tags

2019-12-04  Charlie Zender  <zender@uci.edu>

	* NCO 4.9.0 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.0: Balasana';git push
	git tag -a 4.9.0 -m 'ncremap att_flg, centroid opt, fv2fv_flx/stt, gss n2s nfr fix, HRRR, IFS, MPAS BGC, msh_fl, ntp_mth rhea SLURM, rnr=0.0 == destonly, SGS rewrite/parallelize, TR MWF SCRIP, TR volumetric, vrt_nm, vrt prs tm_nbr fix;ncks area_wgt, chk_nan, chk_map, json dcm pnt fix;ncap2 -O fix';git push --tags

	* nco_map_chk() always print computed frac_a/b statistics

	* Improve bit-grooming documentation

2019-12-03  Charlie Zender  <zender@uci.edu>

	* Document --chk_map, --area_wgt, --chk_nan
